# config/routes.rb
@@ -3,6 +3,7 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   devise_for :admin_users, ActiveAdmin::Devise.config
   ActiveAdmin.routes(self)
+  
   namespace :api do
     namespace :v1 do
       devise_for :users, controllers: {
@@ -11,8 +12,16 @@ Rails.application.routes.draw do
       }
       
       resources :movies, only: [:index, :show, :create, :update, :destroy]
-      resources :subscriptions, only: [:create]
-      post 'subscriptions/webhook', to: 'subscriptions#webhook'
+      
+      resources :subscriptions, only: [:create] do
+        collection do
+          get :status
+          post :confirm
+        end
+      end
+      
+      post 'webhooks/stripe', to: 'subscriptions#webhook'
+      
       patch 'users/update_device_token', to: 'users#update_device_token'
     end
   end
